Add compiled spell geometry